# Pyrph

./: Dockerfile  __main__.py  bot.py  bot_fixed.py  cli.py  config.py  native_bridge.py  pipeline.py  requirements.txt
ir/: __init__.py  builder.py  cfg.py  dependency.py  nodes.py  semantic_fingerprint.py
ir_obf/: __init__.py  encryptor.py  ir_obf_utils.py  mutating_const_pool.py  rewriter.py  semantic_fingerprint.py  shuffler.py  substitution.py
metamorphic/: __init__.py  dispatcher.py  engine.py  variant_generator.py
native_core/: Cargo.toml  README.md  build.sh
native_core/src/: lib.rs
normalize/: __init__.py  comprehension_expander.py  lambda_inliner.py  pass_manager.py  sugar_remover.py  ternary_expander.py
parallel_engine/: __init__.py  coordinator.py  rust_engine.py  shared_state.py
postvm/: __init__.py  dli.py  engine.py  oel.py  pdl.py  peil.py  tbl.py
pyrph/: __init__.py  __main__.py
sag/: __init__.py  alias_builder.py  alias_node.py  ir_injector.py  runtime_emitter.py  sag_pass.py
tests/: test_anti_snapshot.py  test_cli_entrypoint.py  test_env_check.py  test_frame_poison.py  test_integration.py  test_integrity_chain.py  test_junk_pass.py  test_metamorphic.py  test_mutating_const_pool.py  test_native_bridge.py  test_parallel_engine.py  test_postvm.py  test_resolver_v2.py  test_sag.py  test_semantic_fingerprint.py  test_string_fragmenter.py  test_system_stability.py  test_vm4.py  test_vm_codegen_strict_validation.py  test_vm_const_pool_runtime.py  test_vm_interleaver_split_operands.py
transform/: __init__.py  cff.py  function_splitting.py  (+5 more)
(+30 files in other folders)
